# rayon

./: .gitignore  Cargo.toml  README.md  biome.json  eslint.config.mjs  lefthook.yml  package.json  pnpm-lock.yaml
apps/desktop/: components.json  package.json  tsconfig.node.json  vite.config.ts
apps/desktop/src/: App.css  App.test.tsx  App.tsx  commandExecution.test.ts  commandExecution.ts  launcherViewState.test.ts  launcherViewState.ts  main.tsx  theme.test.ts  theme.ts  themeStyles.test.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
apps/desktop/src-tauri/icons/: generate_icons.py  icon.icns
apps/desktop/src-tauri/src/: lib.rs  shell.rs  theme.rs
apps/desktop/src-tauri/src/app/: adapters.rs  clipboard.rs  launcher.rs  mod.rs  paths.rs  state.rs
apps/desktop/src-tauri/src/invoke/: launcher.rs  mod.rs  preferences.rs
apps/desktop/src/components/motion-primitives/: animated-group.tsx
apps/desktop/src/components/ui/: badge.tsx  button.tsx  input.tsx  skeleton.tsx  (+1 more)
apps/desktop/src/styles/: globals.css
crates/core/: Cargo.toml
crates/core/src/: catalog.rs  commands.rs  config.rs  declarative_provider.rs  lib.rs  test_support.rs
crates/core/src/config/: bookmarks.rs  discovery.rs  images.rs  loader.rs  manifest.rs  mod.rs  tests.rs
crates/core/src/launcher/: error.rs  execution.rs  mod.rs  routing.rs  search.rs  service.rs  sessions.rs  state.rs  tests.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/features/: Cargo.toml
crates/features/src/: clipboard.rs  github.rs  hello.rs  kill.rs  lib.rs  maintenance.rs  theme.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/: adding-a-feature.md  backend-architecture.md  bookmarks.md  custom-commands.md  product.md  project-structure.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+16 files in other folders)
