[package]
name = "rayon-desktop"
version.workspace = true
edition.workspace = true
description = "rayon desktop app"
authors = ["Alex"]

[lib]
name = "rayon_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
rayon-core = { path = "../../../crates/core" }
rayon-db = { path = "../../../crates/db" }
rayon-features = { path = "../../../crates/features" }
rayon-platform = { path = "../../../crates/platform" }
rayon-types = { path = "../../../crates/types" }
serde.workspace = true
serde_json.workspace = true
tauri.workspace = true
tauri-plugin-global-shortcut.workspace = true
tauri-plugin-opener.workspace = true
